# Course-BeginningCppProgramming

./: .gitignore
Challanges/: CMakeLists.txt  main.cpp
Challanges/06-VariablesAndConstants/: CMakeLists.txt  main.cpp
Challanges/07-ArraysAndVectors/: CMakeLists.txt  main.cpp
Challanges/08-StatementsAndOperators/: CMakeLists.txt  main.cpp
Challanges/09-ControllingProgramFlow/: CMakeLists.txt  main.cpp
Challanges/11-Functions/: CMakeLists.txt  Functions.h  main.cpp
Challanges/12-PointersAndReferences/: CMakeLists.txt  PointersAndReferences.h  main.cpp
Challanges/13-ClassesAndobjects/: CMakeLists.txt  Movie.cpp  Movie.h  Movies.cpp  Movies.h  main.cpp
Challanges/14-OperatorOverloading/: CMakeLists.txt  main.cpp
Challanges/14-OperatorOverloading/GlobalFunctions/: MyString.cpp  MyString.h  mainGlobalFunctions.cpp
Challanges/14-OperatorOverloading/MemberMethods/: MyString.cpp  MyString.h  mainMemberFunctions.cpp
Challanges/15-Inheritance/: Account.cpp  Account.h  Account_Util.h  CMakeLists.txt  CheckingAccount.cpp  CheckingAccount.h  Savings_Account.h  TrustAccount.cpp  TrustAccount.h  main.cpp
Challanges/15-Inheritance/HandsOn/: Account(RedefiningBaseClassMethods).cpp  Account(RedefiningBaseClassMethods).h  Account(UsedIn-DerivingOurFirstClass).cpp  Account(UsedIn-DerivingOurFirstClass).h  SavingsAccount(RedefiningBaseClassMethods).cpp  SavingsAccount(RedefiningBaseClassMethods).h  SavingsAccount(UsedIn-DerivingOurFirstClass).cpp  SavingsAccount(UsedIn-DerivingOurFirstClass).h  mainBaseClassInitialization.cpp  mainConstructorsAndDestructors.cpp  mainCopyConstructorAssignmentOperator.cpp  mainDeriveOurFirstClass.cpp  mainRedefiningBaseClassMethods.cpp
Challanges/16-Polymorphism/: Account.cpp  Account.h  Account_Util.cpp  Account_Util.h  CMakeLists.txt  CheckingAccount.cpp  CheckingAccount.h  IPrintable.h  Savings_Account.cpp  Savings_Account.h  TrustAccount.cpp  TrustAccount.h  main.cpp
Challanges/16-Polymorphism/HandsOn/: IPrintable.h  mainBaseClassPointers.cpp  mainBaseClassReference.cpp  mainInterfaces.cpp  mainPureVirtualFunction.cpp  mainTheProblem.cpp  mainUsingOverride.cpp  mainVirtualDestructor.cpp  mainVirtualFunctions.cpp
Challanges/17-SmartPointers/: Account.cpp  Account.h  CMakeLists.txt  main.cpp  mainCustomDeleters.cpp  mainSharedPointers.cpp  mainUniquePointers.cpp  mainWeakPointers.cpp
Challanges/18-ExceptionHandling/: CMakeLists.txt  IllegalBalanceException.h  InsufficientFundsException.h  TrustAccount.h  main.cpp  mainClassLevelException.cpp  mainConditionHandled.cpp  mainDividedByZeroException.cpp  mainFunctionExceptionClasses.cpp  mainFunctionMultiException.cpp  mainMilesPerGallonsFunction.cpp  mainStackUnwinding.cpp
Challanges/18-ExceptionHandling/AccountsClasses/: Account.cpp  Account.h  CheckingAccount.cpp  CheckingAccount.h  TrustAccount.cpp
Challanges/19-IOAndStreams/: CMakeLists.txt  main.cpp  mainChallenge2.cpp  mainChallenge3.cpp  mainChallenge4.cpp  mainCopyFile1.cpp  mainCopyFile2.cpp  mainManipBase.cpp  mainManipFields.cpp  mainReadFile1.cpp  mainReadFile2.cpp  mainReadFile3.cpp  mainReadFile4.cpp  mainStreamMainipulatorFloatingPoint.cpp  mainStreamManipulatorBoolean.cpp  mainWriteFile.cpp
Challanges/19-IOAndStreams/Ressource/: Output.txt  Responses.txt  Test1.txt
Challanges/19-IOAndStreams/Source/: City.h  Country.h  PrintToConsole.cpp  PrintToConsole.h  Tours.h  ToursFactory.cpp  ToursFactory.h  Utility.cpp  Utility.h
Challanges/20-STL/: CMakeLists.txt  Challenge3Functions.h  MyPair.h  Person.h  main.cpp  mainAssociativeContainerMap.cpp  mainAssociativeContainerSet.cpp  mainChallenge1.cpp  mainChallenge2.cpp  mainChallenge2Solution.cpp  mainChallenge3.cpp  mainChallenge4.cpp  mainClassTemplate1.cpp  mainContainerAdapterStack.cpp  mainContainerAdaptorQueue.cpp  mainFunctionTemplates.cpp  mainIntroductionToAlgorithms.cpp  mainIterators.cpp  mainPriorityQueue.cpp  mainSequenceContainerArray.cpp  mainSequenceContainerDeque.cpp  mainSequenceContainerList.cpp  mainSequenceContainerVector.cpp  mainTemplateArray.cpp
Challanges/20-STL/Source/: Item.h  MyArray.h  Person.h  Song.h
ProvidedSolutions/Section4/ChallengeSolution/: main.cpp
Section2/Project1/: main  main.cpp
Section4/: CMakeLists.txt  main.cpp
Section4/Challenge/: CMakeLists.txt  main.cpp
Section4/CompilerErrors/: CMakeLists.txt  main.cpp
Section4/CompilerWarnings/: CMakeLists.txt  main.cpp
Section4/FirstProgram/: CMakeLists.txt  main.cpp
Section4/LinkerError/: CMakeLists.txt  main.cpp
Section6/: CMakeLists.txt  main.cpp
Section6/InitializingVariables/: CMakeLists.txt  main.cpp
(+3 files in other folders)
